
# ##########################################################
# Package

[package]

authors = [
  "Matt Wilson <matthew@synesis.com.au>",
]
edition = "2021"
repository = "https://github.com/synesissoftware/FastParse.Rust"
name = "fastparse"
readme = "README.md"
version = "0.0.3"


# ##########################################################
# Targets


# ##########################################################
# Features

[features]


# ##########################################################
# Dependencies

[dependencies]


[dev-dependencies]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

